<resources>
    <string name="app_name">jst</string>
    <string name="confirm_your_order">Confirm your order</string>
    <string name="my_referral">My Referral</string>
    <string name="how_to_earn">How to Earn</string>
    <string name="comment">Comment</string>
    <string name="enquiry_now">Enquiry Now</string>
    <string name="phone">Phone</string>
    <string name="todo">TODO</string>
    <string name="_080_19986133">08019986133</string>
    <string name="name">Name</string>
    <string name="info_brainlogy_tech_com">info.brainlogy@tech.com</string>
    <string name="www_brainlogytechservice_com">www.brainlogytechservice.com</string>
    <string name="follow_us">Follow Us</string>
</resources>