<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="8dp"
        app:cardMaxElevation="10dp"
        app:cardPreventCornerOverlap="true"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/call"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_080_19986133"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            />
        </LinearLayout>
        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/email" />

            <TextView
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_brainlogy_tech_com"
                android:textColor="@color/black"
                android:textSize="18sp"
                />
        </LinearLayout>
            <LinearLayout
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/www" />

                <TextView
                    android:layout_marginLeft="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/www_brainlogytechservice_com"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_marginStart="15dp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="8dp"
        app:cardMaxElevation="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:text="@string/follow_us"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <LinearLayout
            android:layout_marginTop="60dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:src="@drawable/fb"
            android:layout_marginStart="15dp" />
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/link"
                android:layout_marginStart="20dp" />
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:src="@drawable/twit"
                android:layout_marginStart="30dp" />
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/yt"
                android:layout_marginStart="20dp" />
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/wapp"
                android:layout_marginStart="20dp" />
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/insta"
                android:layout_marginStart="20dp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:text="@string/enquiry_now"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="25dp" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="8dp"
        app:cardPreventCornerOverlap="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        >
        <EditText
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:hint="@string/name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:inputType="text"
            android:background="@null"
            android:layout_marginStart="15dp" />
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="8dp"
        app:cardPreventCornerOverlap="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        >
        <EditText
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:hint="Email"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:inputType="textEmailAddress"
            android:background="@null"
            />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="8dp"
        app:cardPreventCornerOverlap="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        >
        <EditText
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:hint="@string/phone"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:inputType="phone"
            android:background="@null"
            android:layout_marginStart="15dp" />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="8dp"
        app:cardPreventCornerOverlap="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        >
        <EditText
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:hint="@string/comment"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:inputType="text"
            android:background="@null"
            android:layout_marginStart="15dp"
            android:autofillHints="" />
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/enquiry_now"
        android:textColor="@color/white"
        android:background="@drawable/bg_gradiant"/>


</LinearLayout>